--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "next": "12.0.7",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
