--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
+    "postcss": "^8.4.5",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7"
+  },
+  "peerDependencies": {
+    "postcss": "^8.4.5"
   }
 }
