--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "dependencies": {
     "next": "12.0.7",
     "node-sass": "^6.0.1",
+    "postcss-focus": "^5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
-    "postcss": "^8.4.5",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5"
   },
   "peerDependencies": {
     "postcss": "^8.4.5"
