--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "client",
   "private": true,
+  "engines": {
+    "npm": "8.x",
+    "node": "14.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
